[package]
name = "velocity"
version = "0.1.0"
authors = ["Rusty Shackleford <a@neb.best>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true
[dependencies]
serde = {version = "1", features = ["derive"]}
bincode = "1.3.1"
velocity_core = {path = "./velocity_core"}
rayon = "1.5.0"
num-bigint = "0.3.1"
num-traits = "0.2.14"
chrono = "0.4.19"
