[package]
name = "velocity_core"
version = "0.1.0"
authors = ["Rusty Shackleford <a@neb.best>"]
edition = "2018"
[lib]
crate-type=["cdylib","rlib"]
[[bin]]
name="main"
path="src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# aes = "0.6.0"
base64 = "0.13.0"
rand="0.7.3"
serde = {version = "1.0.119", features=["derive"]}
bincode = "1.3.1"
crypto = "0.1.2"
chrono = "0.4.19"
num-bigint = "0.3.1"
num-traits = "0.2.14"
sha2 = "0.9.2"
rayon = "1.5.0"
fakedata_generator = "0.2.4"
